--- a/style/style.css
+++ b/style/style.css
@@ -78,6 +78,11 @@ input[type="button"]{
     width: 10vw;
     height: 8vh;
     font-size: 1rem;
+    cursor: pointer;
+}
+
+input[type="button"]:hover{
+    font-size: 1.1rem;
 }
 
 #socials-container{
